--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -15,6 +15,8 @@
     display: flex;
     justify-content: space-around;
     margin: 0 auto;
+    margin-block-start: 0;
+    margin-block-end: 0;
   }
   nav {
     padding: 4rem 0 5rem;
@@ -79,11 +81,16 @@
     }
   }
 }
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 500px) {
   .footer {
     ul.socialMedia,
     ul.legal {
       width: 90%;
+        // padding-bottom: 2rem;
+        // font-style: normal;
+        font-weight: 500;
+        font-size: 0.8rem;
+        line-height: 1.2rem;
     }
   }
 }
