--- a/styles/home/section5.module.scss
+++ b/styles/home/section5.module.scss
@@ -27,7 +27,7 @@
       line-height: 130%;
       color: #16161d;
     }
-    button {
+    a {
       font-weight: 400;
       font-size: 1.625rem;
       line-height: 1.5rem;
