--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -51,7 +51,13 @@
     }
   }
 }
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1000px) {
+  .header nav{
+    width: 80%;
+  }
+}
+
+  @media only screen and (max-width: 800px) {
   .header {
     padding: 0;
     background-color: transparent;
