--- a/styles/choosing-philippines/section1.module.scss
+++ b/styles/choosing-philippines/section1.module.scss
@@ -84,6 +84,7 @@
 }
 @media only screen and (max-width: 1000px) {
   .section {
+    margin-top: 0;
     .header {
       h1 {
         line-height: 120%;
