--- a/styles/choosing-philippines/section2.module.scss
+++ b/styles/choosing-philippines/section2.module.scss
@@ -132,10 +132,11 @@
       ul {
         justify-content: space-evenly;
         li {
+          margin: 0.5rem 1rem;
           width: 85%;
-          padding: 0.8rem;
-          font-size: 1.25rem;
-          line-height: 2rem;
+          padding: 0.5rem;
+          font-size: 1rem;
+          line-height: 140%;
         }
       }
     }
