add medicine page, fix nav bar, resolve some css

--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -48,6 +48,11 @@
         color: var(--primary-color);
         border-bottom: 0.125rem solid var(--primary-color);
       }
+      &.isCurrent{
+        color: var(--primary-color);
+        border-bottom: 0.125rem solid var(--primary-color);
+  
+      }
     }
   }
 }
