--- a/styles/home/section6.module.scss
+++ b/styles/home/section6.module.scss
@@ -17,11 +17,14 @@
   display: flex;
   width: 100%;
   max-width: 100%;
-  justify-content: center;
+  justify-content: flex-start;
   overflow: auto;
+  padding-bottom: 1rem;
+  // min-height: calc(50vh + 2rem);
 }
 .feedback {
   width: 20.5rem;
+  min-width: 20.5rem;
   min-height: 26.625rem;
   display: flex;
   flex-direction: column;
@@ -62,7 +65,6 @@
     margin-bottom: 0;
   }
   .feedbacks {
-    justify-content: flex-start;
     padding: 1rem 2rem;
   }
   .feedback {
