--- a/styles/home/section9.module.scss
+++ b/styles/home/section9.module.scss
@@ -42,8 +42,10 @@
       font-size: 1.5rem;
       line-height: 1.8125rem;
       color: #16161d;
+      width: 85%;
+      max-width: 85%;
     }
-    .icon {
+    img {
       transition: all 1s ease-in;
     }
   }
@@ -60,6 +62,7 @@
 @media only screen and (max-width: 800px) {
   .section {
     padding-bottom: 3rem;
+    padding-top: 1rem;
 
     h2 {
       padding-top: 3rem;
@@ -92,8 +95,9 @@
 //font sizes for mobile
 @media only screen and (max-width: 500px) {
   .section {
-    h2 {
-      padding-top: 1.5rem;
+      h2 {
+      padding-top: 0;
+      // padding-top: 4rem;
       font-size: 2rem;
       line-height: 1.2rem;
     }
