--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: #000000;
-  color: #ffffff;
+  color: var(--white-color);
   text-align: center;
   h2 {
     margin-top: 0;
