--- a/styles/choosing-philippines/section3.module.scss
+++ b/styles/choosing-philippines/section3.module.scss
@@ -16,7 +16,7 @@
       line-height: 2.75rem;
       text-align: left;
       text-transform: capitalize;
-      color: #1140e7;
+      color: var(--primary-color);
     }
   }
 
