--- a/styles/choosing-philippines/section1.module.scss
+++ b/styles/choosing-philippines/section1.module.scss
@@ -11,7 +11,7 @@
   text-align: left;
   // Increase the padding on smaller screen 0 6rem
   padding: 0 6rem;
-  color: white;
+  color: var(--white-color);
   background-image: linear-gradient(
       270deg,
       rgba(0, 0, 0, 0.38) 45.31%,
