--- a/styles/home/section6.module.scss
+++ b/styles/home/section6.module.scss
@@ -20,6 +20,9 @@
   justify-content: flex-start;
   overflow: auto;
   padding-bottom: 1rem;
+  &::-webkit-scrollbar {
+    width: 0;
+  }
   // min-height: calc(50vh + 2rem);
 }
 .feedback {
@@ -30,7 +33,7 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 2rem;
-  background: #ffffff;
+  background: var(--white-color);
   box-shadow: 0rem 0.8125rem 1.1875rem rgba(0, 0, 0, 0.07);
   margin-right: 1.875rem;
   h3 {
@@ -57,7 +60,7 @@
 }
 @media only screen and (max-width: 800px) {
   .section {
-    background-color: #edf0fb;
+    background-color: var(--secondary-color);
     max-width: 100%;
     width: 100%;
     display: block;
