--- a/styles/medicine/section2.module.scss
+++ b/styles/medicine/section2.module.scss
@@ -14,7 +14,7 @@
 
       text-transform: capitalize;
 
-      color: #1140e7;
+      color: var(--primary-color);
     }
 
   }
@@ -40,7 +40,7 @@
 
       text-transform: capitalize;
 
-      color: #1140E7;
+      color: var(--primary-color);
 
     }
 
