--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -121,8 +121,8 @@ b,
   line-height: 140%;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   html {
+//     color-scheme: dark;
+//   }
+// }
