--- a/styles/home/section3.module.scss
+++ b/styles/home/section3.module.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   margin: 0 auto;
   margin-bottom: 1rem;
-  padding: 0 4rem;
+  padding: 4rem;
 
   .textArea {
     width: 50%;
@@ -83,6 +83,7 @@ button.connect {
 
     .textArea,
     .photoArea {
+      padding-bottom: 1.5rem;
       width: 100%;
       text-align: center;
 
