--- a/styles/contact-us/section1.module.scss
+++ b/styles/contact-us/section1.module.scss
@@ -235,6 +235,7 @@
       .contactArea {
         order: 2;
         width: 90%;
+        max-width: 90%;
         justify-self: center;
         margin: 0 auto;
         margin-bottom: 4rem;
