--- a/styles/choosing-philippines/section4.module.scss
+++ b/styles/choosing-philippines/section4.module.scss
@@ -32,6 +32,7 @@
     }
 
     a {
+      display: block;
       width: fit-content;
       text-align: center;
       background: var(--primary-color);
