--- a/styles/home/section7.module.scss
+++ b/styles/home/section7.module.scss
@@ -2,7 +2,7 @@
   width: 75%;
   max-width: 75%;
   margin: 0 auto;
-  min-height: 30vh;
+  // min-height: 30vh;
   margin-bottom: 2rem;
   background-image: url("/aboutUsBg1.svg"), url("/aboutUsBg2.svg");
   background-position: 0% 0%, 100% 100%;
