--- a/styles/medicine/section4.module.scss
+++ b/styles/medicine/section4.module.scss
@@ -74,7 +74,7 @@
         &.highlight {
           background-image: linear-gradient(270deg,
               rgba(0, 0, 0, 0.30) 45.31%,
-              rgba(0, 0, 0, 0.40) 75.14%), url('/medicine-footer-banner2.svg');
+              rgba(0, 0, 0, 0.40) 75.14%), url('/medicine-footer-banner2.png');
           height: 28.875rem;
           max-width: 21.3125rem;
           background-repeat: no-repeat;
