change images to pngs

--- a/styles/home/section1.module.scss
+++ b/styles/home/section1.module.scss
@@ -118,7 +118,7 @@
     margin-top: 0;
     background-image: linear-gradient(rgba(0, 0, 0, 0.4),
         rgba(0, 0, 0, 0.4)),
-      url("/image2.svg");
+      url("/image2.png");
     background-repeat: repeat, no-repeat;
     background-size: cover;
     background-position: 50% -10rem;
