--- a/styles/home/section5.module.scss
+++ b/styles/home/section5.module.scss
@@ -74,7 +74,7 @@
       .hOne {
         background-image: linear-gradient(rgba(0, 0, 0, 0.4),
             rgba(0, 0, 0, 0.4)),
-          url("/image8.svg");
+          url("/image8.png");
         background-repeat: repeat, no-repeat;
         background-size: cover;
         background-position: 50% 20%;
