increase width of homepage sections by 90%

--- a/styles/contact-us/section1.module.scss
+++ b/styles/contact-us/section1.module.scss
@@ -210,7 +210,7 @@
 
 @media only screen and (max-width: 1500px) {
   .section {
-    padding: 2rem 1rem 0;
+    padding: 2rem 0 4rem 0;
 
     .header,
     .card {
