--- a/styles/home/section1.module.scss
+++ b/styles/home/section1.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 75%;
   justify-content: space-between;
-  max-width: 75%;
+  max-width: 1440px;
   margin: 0 auto;
   margin-bottom: 2rem;
   margin-top: 4.5rem;
