--- a/styles/home/section2.module.scss
+++ b/styles/home/section2.module.scss
@@ -1,8 +1,8 @@
 .section {
   display: flex;
-  width: 85%;
+  width: 90%;
   justify-content: space-between;
-  max-width: 75%;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 4rem;
 
