--- a/styles/home/section3.module.scss
+++ b/styles/home/section3.module.scss
@@ -1,6 +1,7 @@
 .section {
   display: flex;
-  width: 75%;
+  width: 90%;
+  max-width: 1440px;
   justify-content: space-between;
   margin: 0 auto;
   margin-bottom: 1rem;
@@ -107,6 +108,7 @@ button.connect {
 
       .image {
         vertical-align: bottom;
+        object-fit: cover;
       }
 
       button.connect {
