--- a/styles/home/section5.module.scss
+++ b/styles/home/section5.module.scss
@@ -1,8 +1,8 @@
 .section {
   display: flex;
-  width: 75%;
+  width: 90%;
   justify-content: space-between;
-  max-width: 75%;
+  max-width: 140px;
   margin: 0 auto;
   margin-bottom: 2rem;
   padding: 0 4rem;
