--- a/styles/home/section8.module.scss
+++ b/styles/home/section8.module.scss
@@ -1,6 +1,6 @@
 .section {
-  width: 75%;
-  max-width: 75%;
+  width: 90%;
+  max-width: 1440px;
   margin: 0 auto;
   h2 {
     text-align: center;
