add top and bottom margin to home sections

--- a/styles/home/section2.module.scss
+++ b/styles/home/section2.module.scss
@@ -3,7 +3,7 @@
   width: 90%;
   justify-content: space-between;
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 100px auto;
   padding: 0 4rem;
 
   .textSection {
