--- a/styles/home/section9.module.scss
+++ b/styles/home/section9.module.scss
@@ -1,7 +1,7 @@
 .section {
   width: 100%;
   max-width: 100%;
-  margin: 0 auto;
+  margin: 100px auto;
   background-color: var(--secondary-color);
   padding-bottom: 6rem;
 
