--- a/styles/home/section3.module.scss
+++ b/styles/home/section3.module.scss
@@ -3,7 +3,7 @@
   width: 90%;
   max-width: 1440px;
   justify-content: space-between;
-  margin: 0 auto;
+  margin: 100px auto;
   margin-bottom: 1rem;
   padding: 4rem;
 
