--- a/styles/home/section5.module.scss
+++ b/styles/home/section5.module.scss
@@ -3,7 +3,7 @@
   width: 90%;
   justify-content: space-between;
   max-width: 1400px;
-  margin: 0 auto;
+  margin: 100px auto;
   margin-bottom: 2rem;
   padding: 0 4rem;
 
