--- a/styles/home/section8.module.scss
+++ b/styles/home/section8.module.scss
@@ -1,7 +1,7 @@
 .section {
   width: 90%;
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 100px auto;
   h2 {
     text-align: center;
     font-style: normal;
